@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2004/10/03 00:13:23 tv Exp $
+# $NetBSD: Makefile,v 1.10 2004/10/10 07:30:23 jdolecek Exp $
 
 PKGNAME=		postgresql74-lib-${BASE_VERS}
-PKGREVISION=		2
+PKGREVISION=		# empty
 SVR4_PKGNAME=		pstgl
 COMMENT=		PostgreSQL database headers and libraries
 
