@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7385 2004/10/10 03:16:08 reed Exp $
+$NetBSD: CHANGES,v 1.7386 2004/10/10 07:30:22 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4595,3 +4595,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated phppgadmin to 3.4.1 [jdolecek 2004-10-09]
 	Added gnugk-2.0.8 [mjl 2004-10-09]
 	Added strace-4.5.7 [reed 2004-10-10]
+	Updated postgresql74 to 7.4.5 [jdolecek 2004-10-10]
